Update previous code

--- a/templates/edit-category.html
+++ b/templates/edit-category.html
@@ -7,7 +7,7 @@
     <title>Edit Category</title>
 </head>
 <body>
-    <form method="post" action="/categories/update/{{.Category.ID}}">
+    <form method="post" action="/categories/{{.Category.ID}}/update">
 
         <label>Category:</label>
         <br>
